tests/idris2/error006/expected
1/1: Building IfErr (IfErr.idr)
Error: While processing right hand side of test. Can't find an implementation for Eq Foo.

IfErr.idr:15:10--15:30
    |
 15 | test x = showIfEq MkFoo MkBar
    |          ^^^^^^^^^^^^^^^^^^^^

Error: While processing right hand side of test2. Can't find an implementation for Show Foo.

IfErr.idr:23:9--23:29
    |
 23 | test2 = showIfEq MkFoo MkBar
    |         ^^^^^^^^^^^^^^^^^^^^

